# sdd_analyzer

./: AGENTS.md  Cargo.toml  PROCESS.md  README.md  requirements.yaml  tasks.yaml
githooks/: pre-commit
scripts/: validate.sh
sdd-core/: Cargo.toml
sdd-core/src/: error.rs  lib.rs  models.rs
sdd-engine/: Cargo.toml
sdd-engine/src/: coverage.rs  lib.rs  parser.rs  scanner.rs
sdd-navigator/: Cargo.toml
sdd-navigator/src/: cli.rs  main.rs
sdd-server/: Cargo.toml
sdd-server/src/: lib.rs  server.rs  state.rs
sdd-server/tests/: integration_test.rs
src/: coverage.rs  lib.rs  main.rs  models.rs  parser.rs  scanner.rs  server.rs  state.rs
tests/: integration_test.rs
