[package]
name = "sdd-navigator"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "sdd-coverage"
path = "src/main.rs"

[dependencies]
sdd-server = { path = "../sdd-server" }
sdd-engine = { path = "../sdd-engine" }
sdd-core = { path = "../sdd-core" }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
clap = { version = "4", features = ["derive"] }
