[package]
name = "sdd-server"
version = "0.1.0"
edition = "2021"

[dependencies]
sdd-core = { path = "../sdd-core" }
sdd-engine = { path = "../sdd-engine" }
serde = { version = "1", features = ["derive"] }
axum = "0.8"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "net"] }
tracing = "0.1"

[dev-dependencies]
serde_json = "1"
tower = "0.5"
http-body-util = "0.1"
clap = { version = "4", features = ["derive"] }
